zerocopy-derive/tests/ui-nightly/union_into_bytes_cfg/union_into_bytes_cfg.stderr
error[E0463]: can't find crate for `zerocopy`
  --> tests/ui-nightly/union_into_bytes_cfg/union_into_bytes_cfg.rs:16:1
   |
16 | extern crate zerocopy;
   | ^^^^^^^^^^^^^^^^^^^^^^ can't find crate
